fix: spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -336,7 +336,7 @@ article [rel="author"] {
 }
 
 .tag:not(:last-child) {
-  margin-right: .125rem;
+  margin-right: .25rem;
 }
 
 /* buttons */
